# arcas_ws

./: README.md
src/FunctionalLayerPackages/Control/aal/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Control/aal/include/: ProjectDescription.h
src/FunctionalLayerPackages/Control/aal/src/: aal_extension_action.cpp  aal_extension_action_qnx.cpp  arm_abstraction_layer.cpp  arm_abstraction_layer_gazebo.cpp  arm_abstraction_layer_qnx.cpp  arm_abstraction_layer_simulink.cpp  ert_main.cpp  main.cpp  main_qnx.cpp  main_simulink.cpp  specific_functions_gazebo.cpp
src/FunctionalLayerPackages/Control/gamepad_control/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Control/gamepad_control/src/: arm_gamepad_control_node.cpp  gamepad_control_node.cpp
src/FunctionalLayerPackages/Control/motion_action_handler/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Control/motion_action_handler/include/: ProjectDescription.h
src/FunctionalLayerPackages/Control/motion_action_handler/src/: Main.cpp  motionactionhandler.cpp
src/FunctionalLayerPackages/Control/ual/: CMakeLists.txt  package.xml  ual.kdev4
src/FunctionalLayerPackages/Control/ual/.kdev4/: ual.kdev4
src/FunctionalLayerPackages/Control/ual/include/: ProjectDescription.h
src/FunctionalLayerPackages/Control/ual/launch/: gazebo_nodes.launch  spawn_bonebraker.launch  spawn_bonebraker_matlab.launch  spawn_hummingbird.launch  testbed_arcas.launch  testbed_arcas_3_uavs_conflict_1.launch  testbed_arcas_4_uavs_circular.launch  testbed_arcas_matlab.launch  testbed_arcas_multiuav.launch  testbed_arcas_multiuav.launch~  testbed_arcas_qnx.launch  testbed_pipes.launch  ual_humminbird.launch  ual_humminbird_multi.launch
src/FunctionalLayerPackages/Control/ual/models/: bonebraker_nog.model
src/FunctionalLayerPackages/Control/ual/src/: .directory  Main.cpp  Main_qnx.cpp  Main_simulink.cpp  hectorgazebocommunication.cpp  qnxcommunication.cpp  qnxudpreceiver.cpp  roscommunication.cpp  roscommunication.cpp~  simulinkgazebocommunication.cpp  ualhectorgazebo.cpp  ualqnx.cpp  ualsimulinkgazebo.cpp
src/FunctionalLayerPackages/Control/ual/urdf/: bonebraker.urdf.xacro  bonebraker_base.urdf.xacro  bonebraker_matlab.urdf.xacro  bonebraker_matlab_base.urdf.xacro  hummingbird.urdf.xacro  hummingbird_1.urdf.xacro  hummingbird_2.urdf.xacro  hummingbird_3.urdf.xacro  hummingbird_4.urdf.xacro  hummingbird_5.urdf.xacro  hummingbird_6.urdf.xacro  hummingbird_7.urdf.xacro  hummingbird_8.urdf.xacro  hummingbird_base.urdf.xacro  matlab.old  matlba_old.xacro
src/FunctionalLayerPackages/Control/ual/world/: testbed_arcas.world  testbed_pipes.world  testbed_texture.world
src/FunctionalLayerPackages/DataTypes/arcas_msgs/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/DataTypes/arcas_msgs/msg/: AALControlReference.msg  AALControlReferenceStamped.msg  AALState.msg  AALStateStamped.msg  ARMConfigurations.msg  ARMConfigurationsStamped.msg  AerialVehicleTrajectoryPoint.msg  AerialVehicleTrajectoryPointStamped.msg  AerialVehicleTrajectoryPointStamped.msg~  AngularVelocity.msg  ArmControlReferences.msg  ArmControlReferences.msg~  ArmControlReferencesStamped.msg  ArmControlReferencesStamped.msg~  (+49 more)
src/FunctionalLayerPackages/Demo/arcas_joystick/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Demo/rviz_scenario/: CMakeLists.txt  package.xml  rviz_scenario.kdev4
src/FunctionalLayerPackages/Demo/transform_from_vicon/: CMakeLists.txt  package.xml  transform_from_vicon.kdev4
src/FunctionalLayerPackages/Simulation/bonebraker_arm_controller/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Simulation/bonebraker_controller/: CMakeLists.txt  package.xml
src/FunctionalLayerPackages/Simulation/hector_quadrotor_gazebo_plugins/: CMakeLists.txt  hector_quadrotor_gazebo_plugins.cbp  package.xml
src/FunctionalLayerPackages/Simulation/joint_controller/: CMakeLists.txt  package.xml
src/use_tg/arcas_visualizer/: CMakeLists.txt  CMakeLists.txt~  arcas_visualizer.kdev4  package.xml
src/use_tg/arcas_visualizer/.kdev4/: arcas_visualizer.kdev4
src/use_tg/arcas_visualizer/src/: ArcasVisualizer.cpp  ArcasVisualizer.cpp~  ArcasVisualizer.h  Comms.cpp  Comms.cpp~  Comms.h  Comms.h~  Maneuver.cpp  Maneuver.h  Manouver.cpp  Manouver.h  arcas_visualizer.cpp
src/use_tg/arcas_visualizer/ui/: about_arcas_visualizer.ui
src/use_tg/external_tools/HACD_Lib/: CMakeLists.txt  CMakeLists.txt~  HACD_Lib.kdev4  package.xml
src/use_tg/external_tools/RVO2-3D/: CMakeLists.txt  CMakeLists.txt~  RVO2-3D.kdev4  package.xml
src/use_tg/functions/src/: CMakeLists.txt  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RealVector.h  UAVFlightPlan.cpp  functions.cpp  functions.cpp~  functions.h
src/use_tg/orca_module/: CMakeLists.txt  CMakeLists.txt~  orca_module.kdev4  package.xml  package.xml~
src/use_tg/orca_module/.kdev4/: orca_module.kdev4
src/use_tg/orca_module/cfg/: Active.cfg  Active.cfg~
src/use_tg/orca_module/docs/: activeConfig-usage.dox  activeConfig.dox  activeConfig.wikidoc
src/use_tg/orca_module/src/: Maneuver.cpp  Maneuver.cpp~  ORCAModule.cpp  ORCAModule.cpp~  orca_launcher.cpp  orca_launcher.cpp~  pref_velocity_publisher.cpp  pref_velocity_publisher.cpp~
src/use_tg/ros_bridge_dummy/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  ros_bridge_dummy.kdev4
src/use_tg/ros_bridge_dummy/.kdev4/: ros_bridge_dummy.kdev4
src/use_tg/ros_bridge_dummy/src/: ROSBridgeDummy.cpp  ROSBridgeDummy.cpp~  ROSBridgeDummyIncremental.cpp  arm_commander.cpp  util.cpp  util.cpp~  util.h  visualization.cpp
src/use_tg/sparser/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/use_tg/sparser/src/: Checker.cpp  ParseBlock.cpp  ParseProperty.cpp  Parser.cpp  StringUtil.cpp  main.cpp
src/use_tg/tg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  tg.kdev4
src/use_tg/tg/.kdev4/: tg.kdev4
src/use_tg/tg/src/: .#trajectory_generator.cpp.1.1.1.1  ContinousTrajectoryFollower.cpp  DiscreteTrajectoryFollower.cpp  emergency_stopper.cpp  trajectory_generator.cpp  trajectory_generator.cpp~
(+499 files in other folders)
