<?xml version="1.0"?>
<package>
  <name>arcas_visualizer</name>
  <version>0.0.0</version>
  <description>This is a simple commander-visualizer developed in order to make it easier the execution of multi-UAV experiments</description>

  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>functions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arcas_msgs</build_depend>
  <build_depend>arcas_actions_msgs</build_depend>
  <build_depend>tg</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>functions</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>arcas_msgs</run_depend>
  <run_depend>arcas_actions_msgs</run_depend>
  <run_depend>tg</run_depend>
  <run_depend>actionlib</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>