<?xml version="1.0"?>
<package>
  <name>orca_module</name>
  <version>0.0.0</version>
  <description>This module is responible for coordinating the trajectories of UAVs in the system</description>

  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>active_config</build_depend>
  <build_depend>RVO2-3D</build_depend>
  <build_depend>RVO2-3D_unstable</build_depend>
  <build_depend>functions</build_depend>
  <build_depend>sparser</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arcas_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>active_config</run_depend>
  <run_depend>RVO2-3D</run_depend>
  <run_depend>RVO2-3D_unstable</run_depend>
  <run_depend>functions</run_depend>
  <run_depend>sparser</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>arcas_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>