<?xml version="1.0"?>
<package>
  <name>ros_bridge_dummy</name>
  <version>0.0.0</version>
  <description>This module can be used to easily send a mission to tg module</description>
  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>

  <license>BSD</license> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>functions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>arcas_msgs</build_depend>
  <build_depend>arcas_actions_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>functions</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>arcas_msgs</run_depend>
  <run_depend>arcas_actions_msgs</run_depend>
  <run_depend>actionlib</run_depend>
</package>