<?xml version="1.0"?>
<package>
  <name>sparser</name>
  <version>0.0.0</version>
  <description>The sparser package</description>

  <maintainer email="dalejo@us.es">David Alejo Teissière</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>