<?xml version="1.0"?>
<package>
<name>transform_from_vicon</name>
<version>2.0.0</version>
<description>The transform_from_vicon package</description>

  <maintainer email="catec@todo.todo">CATEC</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arcas_msgs</build_depend>
  <build_depend>arcas_actions_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>functions</build_depend>
  <build_depend>RVO2-3D_unstable</build_depend>
  <run_depend>arcas_msgs</run_depend>
  <run_depend>arcas_actions_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>functions</run_depend>
  <run_depend>RVO2-3D_unstable</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- You can specify that this package is a metapackage here: -->
  <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
  </package>



